Add value for enchanted books

--- a/base_worth.yml
+++ b/base_worth.yml
@@ -440,6 +440,7 @@ worth:
   web: 0.01 # Legacy name
   bell: 147.23
   goathorn: 8.79
+  enchantedbook: 89.30
   fireworkstar: 101.75
   fireworkrocket: 11.12
   musicdisc11: 132.00
