Update price for the Totem of Undying

--- a/worth_yml_header.yml
+++ b/worth_yml_header.yml
@@ -22,6 +22,9 @@
 
 #
 # Changelog:
+#   1.20.x (Update 3):
+#     Updates the price for the Totem of Undying
+#
 #   1.20.x (Update 2):
 #     Fixes the prices for andesite, diorite and granite
 #     Reduces the price of chainmail armor
