Update prices for Blaze Rods and Dragon's Breath

--- a/worth_yml_header.yml
+++ b/worth_yml_header.yml
@@ -22,6 +22,10 @@
 
 #
 # Changelog:
+#   1.20.x (Update 4):
+#     Updates the price of Blaze Rods and all derivative items
+#     Updates the price of Dragon's Breath
+#
 #   1.20.x (Update 3):
 #     Updates the price for the Totem of Undying
 #
