--- a/worth_yml_header.yml
+++ b/worth_yml_header.yml
@@ -22,6 +22,9 @@
 
 #
 # Changelog:
+#   1.20.x (Update 5):
+#     Updates the price of ice and ice-related blocks
+#
 #   1.20.x (Update 4):
 #     Updates the price of Blaze Rods and all derivative items
 #     Updates the price of Dragon's Breath
