Fix issue template

--- a/.github/ISSUE_TEMPLATE/worth-yml-problem.yml
+++ b/.github/ISSUE_TEMPLATE/worth-yml-problem.yml
@@ -2,29 +2,32 @@ name: "Problem with prices in worth.yml"
 description: Report an issue with the prices in outputted `worth.yml`
 body:
   - id: feature
+    type: input
     attributes:
       label: What block(s)/item(s) have an unsatisfactory price?
     validations:
       required: true
   - id: actual
+    type: input
     attributes:
       label: What is the current price of the block(s)/item(s)?
     validations:
       required: true
   - id: expected
+    type: input
     attributes:
       label: What price(s) were you expecting instead?
     validations:
       required: true
-  - type: dropdown
-    id: craftable
+  - id: craftable
+    type: dropdown
     attributes:
       label: Is the item craftable?
       options:
-        - Yes
-        - No
-        - Not sure
-  - type: textarea
-    id: notes
+        - "Yes"
+        - "No"
+        - "Not sure"
+  - id: notes
+    type: textarea
     attributes:
       label: Is there anything else you would like to add to your report?
