Partial update for Minecraft 1.21
The new "Trial Chambers" stuff has not been added to the worth.yml for now, as they require additional research.

--- a/base_worth.yml
+++ b/base_worth.yml
@@ -89,6 +89,8 @@ SUSPICIOUS_STEW: 5.20
 
 # Mob drops/related items
 TURTLE_EGG: 18.98
+TURTLE_SCUTE: 19.93
+ARMADILLO_SCUTE: 2.56
 DRAGON_EGG: 1100.00
 SNIFFER_EGG: 23.24
 STRING: 1.65
@@ -333,7 +335,9 @@ ZOMBIE_HEAD: 5000.00
 DRAGON_HEAD: 25000.00
 
 # Banner pattern
+FLOW_BANNER_PATTERN: 5832.25
 GLOBE_BANNER_PATTERN: 481.80
+GUSTER_BANNER_PATTERN: 5832.25
 PIGLIN_BANNER_PATTERN: 5832.25
 SNOUT_BANNER_PATTERN: 5832.25 # Legacy name
 
@@ -346,7 +350,9 @@ BREWER_POTTERY_SHERD: 497.87
 BURN_POTTERY_SHERD: 497.87
 DANGER_POTTERY_SHERD: 497.87
 EXPLORER_POTTERY_SHERD: 497.87
+FLOW_POTTERY_SHERD: 497.87
 FRIEND_POTTERY_SHERD: 497.87
+GUSTER_POTTERY_SHERD: 497.87
 HEART_POTTERY_SHERD: 497.87
 HEARTBREAK_POTTERY_SHERD: 497.87
 HOWL_POTTERY_SHERD: 497.87
@@ -354,29 +360,32 @@ MINER_POTTERY_SHERD: 497.87
 MOURNER_POTTERY_SHERD: 497.87
 PLENTY_POTTERY_SHERD: 497.87
 PRIZE_POTTERY_SHERD: 497.87
+SCRAPE_POTTERY_SHERD: 497.87
 SHEAF_POTTERY_SHERD: 497.87
 SHELTER_POTTERY_SHERD: 497.87
 SKULL_POTTERY_SHERD: 497.87
 SNORT_POTTERY_SHERD: 497.87
 
 # Smithing templates
-NETHERITE_UPGRADE_SMITHING_TEMPLATE: 8850.70
-SENTRY_ARMOR_TRIM_SMITHING_TEMPLATE: 8850.70
-VEX_ARMOR_TRIM_SMITHING_TEMPLATE: 8850.70
-WILD_ARMOR_TRIM_SMITHING_TEMPLATE: 8850.70
+BOLT_ARMOR_TRIM_SMITHING_TEMPLATE: 8850.70
 COAST_ARMOR_TRIM_SMITHING_TEMPLATE: 8850.70
 DUNE_ARMOR_TRIM_SMITHING_TEMPLATE: 8850.70
-WAYFINDER_ARMOR_TRIM_SMITHING_TEMPLATE: 8850.70
-RAISER_ARMOR_TRIM_SMITHING_TEMPLATE: 8850.70
-SHAPER_ARMOR_TRIM_SMITHING_TEMPLATE: 8850.70
-HOST_ARMOR_TRIM_SMITHING_TEMPLATE: 8850.70
-WARD_ARMOR_TRIM_SMITHING_TEMPLATE: 8850.70
-SILENCE_ARMOR_TRIM_SMITHING_TEMPLATE: 8850.70
-TIDE_ARMOR_TRIM_SMITHING_TEMPLATE: 8850.70
-SNOUT_ARMOR_TRIM_SMITHING_TEMPLATE: 8850.70
-RIB_ARMOR_TRIM_SMITHING_TEMPLATE: 8850.70
 EYE_ARMOR_TRIM_SMITHING_TEMPLATE: 8850.70
+FLOW_ARMOR_TRIM_SMITHING_TEMPLATE: 8850.70
+HOST_ARMOR_TRIM_SMITHING_TEMPLATE: 8850.70
+NETHERITE_UPGRADE_SMITHING_TEMPLATE: 8850.70
+RAISER_ARMOR_TRIM_SMITHING_TEMPLATE: 8850.70
+RIB_ARMOR_TRIM_SMITHING_TEMPLATE: 8850.70
+SENTRY_ARMOR_TRIM_SMITHING_TEMPLATE: 8850.70
+SHAPER_ARMOR_TRIM_SMITHING_TEMPLATE: 8850.70
+SILENCE_ARMOR_TRIM_SMITHING_TEMPLATE: 8850.70
+SNOUT_ARMOR_TRIM_SMITHING_TEMPLATE: 8850.70
 SPIRE_ARMOR_TRIM_SMITHING_TEMPLATE: 8850.70
+TIDE_ARMOR_TRIM_SMITHING_TEMPLATE: 8850.70
+VEX_ARMOR_TRIM_SMITHING_TEMPLATE: 8850.70
+WARD_ARMOR_TRIM_SMITHING_TEMPLATE: 8850.70
+WAYFINDER_ARMOR_TRIM_SMITHING_TEMPLATE: 8850.70
+WILD_ARMOR_TRIM_SMITHING_TEMPLATE: 8850.70
 
 # Potions
 POTION: 100.0
@@ -440,6 +449,28 @@ SPLASH_POTION{Potion:strongstrength}: 110.48
 SPLASH_POTION{Potion:swiftness}: 33.5
 SPLASH_POTION{Potion:weakness}: 19.42
 
+# Music discs
+DISC_FRAGMENT_5: 14.00
+MUSIC_DISC_11: 132.00
+MUSIC_DISC_13: 132.00
+MUSIC_DISC_5: 132.00
+MUSIC_DISC_BLOCKS: 132.00
+MUSIC_DISC_CAT: 132.00
+MUSIC_DISC_CHIRP: 132.00
+MUSIC_DISC_CREATOR: 132.00
+MUSIC_DISC_CREATOR_MUSIC_BOX: 132.00
+MUSIC_DISC_FAR: 132.00
+MUSIC_DISC_MALL: 132.00
+MUSIC_DISC_MELLOHI: 132.00
+MUSIC_DISC_OTHERSIDE: 132.00
+MUSIC_DISC_PIGSTEP: 132.00
+MUSIC_DISC_PRECIPICE: 132.00
+MUSIC_DISC_RELIC: 132.00
+MUSIC_DISC_STAL: 132.00
+MUSIC_DISC_STRAD: 132.00
+MUSIC_DISC_WAIT: 132.00
+MUSIC_DISC_WARD: 132.00
+
 # Misc.
 COBWEB: 0.01
 WEB: 0.01 # Legacy name
@@ -448,22 +479,5 @@ GOAT_HORN: 8.79
 ENCHANTED_BOOK: 89.30
 FIREWORK_STAR: 101.75
 FIREWORK_ROCKET: 11.12
-MUSIC_DISC_11: 132.00
-MUSIC_DISC_13: 132.00
-MUSIC_DISC_5: 132.00
-MUSIC_DISC_BLOCKS: 132.00
-MUSIC_DISC_CAT: 132.00
-MUSIC_DISC_CHIRP: 132.00
-MUSIC_DISC_FAR: 132.00
-MUSIC_DISC_MALL: 132.00
-MUSIC_DISC_MELLOHI: 132.00
-MUSIC_DISC_OTHERSIDE: 132.00
-MUSIC_DISC_PIGSTEP: 132.00
-MUSIC_DISC_RELIC: 132.00
-MUSIC_DISC_STAL: 132.00
-MUSIC_DISC_STRAD: 132.00
-MUSIC_DISC_WAIT: 132.00
-MUSIC_DISC_WARD: 132.00
-DISC_FRAGMENT_5: 14.00
 FILLED_MAP: 10.00
 WRITTEN_BOOK: 10.48
