Complete update for Minecraft 1.21

--- a/base_worth.yml
+++ b/base_worth.yml
@@ -89,7 +89,8 @@ SUSPICIOUS_STEW: 5.20
 
 # Mob drops/related items
 TURTLE_EGG: 18.98
-TURTLE_SCUTE: 19.93
+SCUTE: 1.10 # Legacy name
+TURTLE_SCUTE: 1.10
 ARMADILLO_SCUTE: 2.56
 DRAGON_EGG: 1100.00
 SNIFFER_EGG: 23.24
@@ -102,10 +103,10 @@ HONEYCOMB: 9.00
 HONEY_BOTTLE: 4.25
 INK_SAC: 3.30
 GLOW_INK_SAC: 3.55
-SCUTE: 1.10
 SLIME_BALL: 11.00
 ROTTEN_FLESH: 0.39
 BLAZE_ROD: 14.00
+BREEZE_ROD: 28.00
 SHULKER_SHELL: 34.20
 GUNPOWDER: 11.00
 DRAGON_BREATH: 180.00
@@ -481,3 +482,7 @@ FIREWORK_STAR: 101.75
 FIREWORK_ROCKET: 11.12
 FILLED_MAP: 10.00
 WRITTEN_BOOK: 10.48
+OMINOUS_BOTTLE: 37.15
+HEAVY_CORE: 149.45
+TRIAL_KEY: 500.00
+OMINOUS_TRIAL_KEY: 800.00
