--- a/base_worth.yml
+++ b/base_worth.yml
@@ -26,6 +26,7 @@ CALCITE: 1.10
 TUFF: 0.26
 MUD: 0.58
 MOSS_BLOCK: 2.20
+PALE_MOSS_BLOCK: 2.40
 POINTED_DRIPSTONE: 1.01
 SPONGE: 12.71
 WET_SPONGE: 11.00
@@ -120,6 +121,7 @@ BEE_NEST: 39.87
 OCHRE_FROGLIGHT: 59.44
 PEARLESCENT_FROGLIGHT: 59.44
 VERDANT_FROGLIGHT: 59.44
+RESIN_CLUMP: 1.95
 
 # Logs
 ACACIA_LOG: 9.06
@@ -128,6 +130,7 @@ DARK_OAK_LOG: 9.06
 JUNGLE_LOG: 9.06
 MANGROVE_LOG: 9.06
 OAK_LOG: 9.06
+PALE_OAK_LOG: 10.42
 SPRUCE_LOG: 9.06
 CHERRY_LOG: 10.42
 CRIMSON_STEM: 11.83
@@ -142,6 +145,7 @@ STRIPPED_DARK_OAK_LOG: 10.35
 STRIPPED_JUNGLE_LOG: 10.35
 STRIPPED_MANGROVE_LOG: 10.35
 STRIPPED_OAK_LOG: 10.35
+STRIPPED_PALE_OAK_LOG: 10.35
 STRIPPED_SPRUCE_LOG: 10.35
 STRIPPED_CHERRY_LOG: 10.35
 STRIPPED_CRIMSON_STEM: 12.42
@@ -158,6 +162,7 @@ AZALEA_LEAVES_FLOWERS: 2.60 # Legacy name
 JUNGLE_LEAVES: 2.20
 MANGROVE_LEAVES: 2.20
 OAK_LEAVES: 2.20
+PALE_OAK_LEAVES: 2.20
 SPRUCE_LEAVES: 2.20
 
 # Saplings
@@ -166,6 +171,7 @@ BIRCH_SAPLING: 1.80
 DARK_OAK_SAPLING: 1.80
 JUNGLE_SAPLING: 1.80
 OAK_SAPLING: 1.80
+PALE_OAK_SAPLING: 1.80
 SPRUCE_SAPLING: 1.80
 CHERRY_SAPLING: 1.80
 MANGROVE_PROPAGULE: 1.80
@@ -195,6 +201,8 @@ TORCHFLOWER: 1.80
 WHITE_TULIP: 1.93
 WITHER_ROSE: 225.00
 CHORUS_FLOWER: 27.50
+OPEN_EYEBLOSSOM: 3.50
+CLOSED_EYEBLOSSOM: 3.50
 
 # Plants
 BAMBOO: 0.81
@@ -214,6 +222,7 @@ WEEPING_VINES: 6.45
 TWISTING_VINES: 6.45
 GLOW_LICHEN: 6.70
 HANGING_ROOTS: 0.03
+PALE_HANGING_MOSS: 0.05
 SMALL_DRIPLEAF: 2.30
 BIG_DRIPLEAF: 3.50
 PITCHER_POD: 0.90
