--- a/base_worth.yml
+++ b/base_worth.yml
@@ -79,6 +79,8 @@ MUTTON: 1.10
 PORKCHOP: 4.40
 RABBIT: 1.65
 EGG: 0.55
+BLUE_EGG: 0.76
+BROWN_EGG: 0.76
 KELP: 3.13
 SEA_PICKLE: 3.74
 SALMON: 3.58
@@ -203,15 +205,21 @@ WITHER_ROSE: 225.00
 CHORUS_FLOWER: 27.50
 OPEN_EYEBLOSSOM: 3.50
 CLOSED_EYEBLOSSOM: 3.50
+WILDFLOWERS: 0.24
+CACTUS_FLOWER: 2.14
 
 # Plants
 BAMBOO: 0.81
 GRASS: 0.01 # Legacy name
 SHORT_GRASS: 0.01
 TALL_GRASS: 0.01
+DRY_SHORT_GRASS: 0.01
+DRY_TALL_GRASS: 0.01
 FERN: 0.01
 LARGE_FERN: 0.01
 DEAD_BUSH: 0.01
+BUSH: 0.02
+FIREFLY_BUSH: 0.04
 SUGAR_CANE: 0.55
 CACTUS: 5.50
 CRIMSON_ROOTS: 0.03
