--- a/base_worth.yml
+++ b/base_worth.yml
@@ -488,6 +488,7 @@ MUSIC_DISC_STAL: 132.00
 MUSIC_DISC_STRAD: 132.00
 MUSIC_DISC_WAIT: 132.00
 MUSIC_DISC_WARD: 132.00
+MUSIC_DISC_TEARS: 132.00
 
 # Misc.
 COBWEB: 0.01
