--- a/base_worth.yml
+++ b/base_worth.yml
@@ -478,6 +478,7 @@ MUSIC_DISC_CHIRP: 132.00
 MUSIC_DISC_CREATOR: 132.00
 MUSIC_DISC_CREATOR_MUSIC_BOX: 132.00
 MUSIC_DISC_FAR: 132.00
+MUSIC_DISC_LAVA_CHICKEN: 132.00
 MUSIC_DISC_MALL: 132.00
 MUSIC_DISC_MELLOHI: 132.00
 MUSIC_DISC_OTHERSIDE: 132.00
@@ -486,9 +487,9 @@ MUSIC_DISC_PRECIPICE: 132.00
 MUSIC_DISC_RELIC: 132.00
 MUSIC_DISC_STAL: 132.00
 MUSIC_DISC_STRAD: 132.00
+MUSIC_DISC_TEARS: 132.00
 MUSIC_DISC_WAIT: 132.00
 MUSIC_DISC_WARD: 132.00
-MUSIC_DISC_TEARS: 132.00
 
 # Misc.
 COBWEB: 0.01
