--- a/base_worth.yml
+++ b/base_worth.yml
@@ -321,6 +321,7 @@ CHAINMAIL_BOOTS: 150.00
 CHAINMAIL_CHESTPLATE: 325.00
 CHAINMAIL_HELMET: 150.00
 CHAINMAIL_LEGGINGS: 250.00
+COPPER_HORSE_ARMOR: 102.00
 IRON_HORSE_ARMOR: 132.00
 GOLDEN_HORSE_ARMOR: 385.00
 DIAMOND_HORSE_ARMOR: 3300.00
@@ -505,3 +506,4 @@ OMINOUS_BOTTLE: 37.15
 HEAVY_CORE: 149.45
 TRIAL_KEY: 500.00
 OMINOUS_TRIAL_KEY: 800.00
+COPPER_GOLEM_STATUE: 132.64
