--- a/base_worth.yml
+++ b/base_worth.yml
@@ -325,6 +325,10 @@ COPPER_HORSE_ARMOR: 102.00
 IRON_HORSE_ARMOR: 132.00
 GOLDEN_HORSE_ARMOR: 385.00
 DIAMOND_HORSE_ARMOR: 3300.00
+COPPER_NAUTILUS_ARMOR: 61.00
+IRON_NAUTILUS_ARMOR: 80.00
+GOLDEN_NAUTILUS_ARMOR: 231.00
+DIAMOND_NAUTILUS_ARMOR: 1980.00
 SADDLE: 110.00
 TRIDENT: 78.83
 TOTEM_OF_UNDYING: 8230.00
