Tweak dragon egg/head prices (requested by @technobird22)

--- a/worth_yml_header.yml
+++ b/worth_yml_header.yml
@@ -24,6 +24,7 @@
 # Changelog:
 #   1.21.11:
 #     Add items introduced in 1.21.9 and 1.21.11
+#     Tweak prices for dragon eggs and heads
 #
 #   1.21.7:
 #     Add items introduced in 1.21.2, 1.21.4, 1.21.5, 1.21.6 and 1.21.7
